--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   go_router: ^6.2.0
   adobe_xd: ^1.0.0+1
   flutter_svg: ^0.17.0
+  syncfusion_flutter_gauges: ^21.1.41
+  syncfusion_flutter_charts: ^21.1.41
 
 dev_dependencies:
   flutter_test:
