--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -39,9 +38,10 @@ dependencies:
   firebase_auth: ^4.2.9
   go_router: ^6.2.0
   adobe_xd: ^1.0.0+1
-  flutter_svg: ^0.17.0
   syncfusion_flutter_gauges: ^21.1.41
   syncfusion_flutter_charts: ^21.1.41
+  flutter_svg: ^0.19.3
+
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +59,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+   - assets/
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
