--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
         android:label="optairconnect"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+                <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="high_importance_channel" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,5 +34,14 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <service
+            android:name="io.flutter.plugins.firebase.messaging.FirebaseMessagingBackgroundService"
+            android:exported="false" />
+        <receiver android:name="io.flutter.plugins.firebase.messaging.BackgroundMessagingBroadcastReceiver" android:exported="false" android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </receiver>
+
     </application>
 </manifest>
