--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.7.0
   firebase_auth: ^4.2.9
-  go_router: ^6.2.0
-  adobe_xd: ^1.0.0+1
+  go_router: ^7.0.1
+  adobe_xd: ^2.0.1
   syncfusion_flutter_gauges: ^21.1.41
   syncfusion_flutter_charts: ^21.1.41
-  flutter_svg: ^0.19.3
-  flutter_launcher_icons: ^0.8.1
+  flutter_svg: ^1.1.6
+  flutter_launcher_icons: ^0.13.1
   firebase_database: ^10.2.0
+  cloud_firestore: ^4.7.0
+  firebase_messaging: ^14.6.2
+  flutter_local_notifications: ^14.1.1
 
 
 flutter_launcher_icons:
