--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   cloud_firestore: ^4.7.0
   firebase_messaging: ^14.6.2
   flutter_local_notifications: ^14.1.1
+  http: ^0.13.3
+
 
 
 flutter_launcher_icons:
